cupt (2.6.0~) UNRELEASED; urgency=low

  * console:
    - Managing packages:
      - The option 'cupt::resolver::track-reasons' does not correspond to the
        console '--show-reasons' option anymore.
  * lib:
    - Removed deprecated functions 'fatal', 'warn', 'debug', 'simulate'.
    - [API break] '__': now returns 'const char*' instead of 'string'.
    - cache:
      - [API break] Pointers to Package and Version objects are now persistent
        and unique. Thus shared pointers to those objects are no more used in
        public interfaces.
      - [API break] PinnedVersion: removed explicit constructor.
      - [API break] Removed deprecated methods and structures.
    - cache/relation:
      - [API break] ArchitecturedRelation, ArchitecturedRelationExpression:
        constructor from string subrange is now explicit.
    - config:
      - Don't store unused APT variables anymore.
      - New option 'cupt::console::actions-preview::show-reasons'.
    - cache/version:
      - [API break] 'operator==': removed, versions can be now compared by
        pointers' values.
    - system/resolver:
      - [API break] SuggestedPackage: new field 'automaticallyInstalledFlag',
        removed old field 'manuallySelected'.
      - New method 'setAutomaticallyInstalledFlag'.
  * debian:
    - control:
      - Bumped the library API version.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 08 Apr 2012 10:59:48 +0300

cupt (2.5.4) unstable; urgency=low

  * lib:
    - system/resolvers/native:
      - Fixed an internal error when a not installed package was considered
        but then autoremoved (under certain conditions). This regression was
        introduced in 2.5.0. Thanks to Karol Kozłowski for the report.
        (Closes: #672693)
    - download/methodfactory:
      - [Jonathan Nieder] 'getDownloadMethodForUri': include the protocol to
        the 'no download handlers' error message.
  * po:
    - Added Slovak translation by Ivan Masár. (Closes: #671793)